src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_signed_does_not_allow_date.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. DATE_AND_TIME is no ANY_SIGNED
  ┌─ <internal>:3:56
  │
3 │         FUNCTION func1  : INT VAR x : DT; END_VAR test(x); END_FUNCTION
  │                                                        ^ Invalid type nature for generic argument. DATE_AND_TIME is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. LDATE_AND_TIME is no ANY_SIGNED
  ┌─ <internal>:4:57
  │
4 │         FUNCTION func2  : INT VAR x : LDT; END_VAR test(x); END_FUNCTION
  │                                                         ^ Invalid type nature for generic argument. LDATE_AND_TIME is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. DATE is no ANY_SIGNED
  ┌─ <internal>:5:58
  │
5 │         FUNCTION func3  : INT VAR x : DATE; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. DATE is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. TIME_OF_DAY is no ANY_SIGNED
  ┌─ <internal>:6:57
  │
6 │         FUNCTION func4  : INT VAR x : TOD; END_VAR test(x); END_FUNCTION
  │                                                         ^ Invalid type nature for generic argument. TIME_OF_DAY is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. LTIME_OF_DAY is no ANY_SIGNED
  ┌─ <internal>:7:58
  │
7 │         FUNCTION func5  : INT VAR x : LTOD; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. LTIME_OF_DAY is no ANY_SIGNED
