src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_signed_does_not_allow_unsigned_ints.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error: Invalid type nature for generic argument. USINT is no ANY_SIGNED
  ┌─ <internal>:3:59
  │
3 │         FUNCTION func1  : INT VAR x : USINT; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. USINT is no ANY_SIGNED

error: Invalid type nature for generic argument. UINT is no ANY_SIGNED
  ┌─ <internal>:4:58
  │
4 │         FUNCTION func2  : INT VAR x : UINT; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. UINT is no ANY_SIGNED

error: Invalid type nature for generic argument. UDINT is no ANY_SIGNED
  ┌─ <internal>:5:59
  │
5 │         FUNCTION func3  : INT VAR x : UDINT; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. UDINT is no ANY_SIGNED

error: Invalid type nature for generic argument. ULINT is no ANY_SIGNED
  ┌─ <internal>:6:59
  │
6 │         FUNCTION func4  : INT VAR x : ULINT; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. ULINT is no ANY_SIGNED


