src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_signed_multiple_parameters.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. REAL is no ANY_SIGNED
   ┌─ <internal>:15:14
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │              ^^^^^^^^ Invalid type nature for generic argument. REAL is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. UDINT is no ANY_SIGNED
   ┌─ <internal>:15:24
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                        ^^^^^^^^^^^^ Invalid type nature for generic argument. UDINT is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. TIME is no ANY_SIGNED
   ┌─ <internal>:15:50
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                  ^^^^^^^^ Invalid type nature for generic argument. TIME is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. BYTE is no ANY_SIGNED
   ┌─ <internal>:15:60
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                            ^^^^^^^^ Invalid type nature for generic argument. BYTE is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. STRING is no ANY_SIGNED
   ┌─ <internal>:15:70
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                      ^^^^^^^ Invalid type nature for generic argument. STRING is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. CHAR is no ANY_SIGNED
   ┌─ <internal>:15:79
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                               ^^^^^^^^ Invalid type nature for generic argument. CHAR is no ANY_SIGNED

error[E062]: Invalid type nature for generic argument. DATE is no ANY_SIGNED
   ┌─ <internal>:15:89
   │
15 │         func(var_real, var_unsigned, var_signed, var_time, var_byte, var_str, var_char, var_date);
   │                                                                                         ^^^^^^^^ Invalid type nature for generic argument. DATE is no ANY_SIGNED
